--- a/RNN/__MyLab__/EnglishToGerman/Drawing Decision Boundry-Mohamed Fathallah - Copy.ipynb
+++ b/RNN/__MyLab__/EnglishToGerman/Drawing Decision Boundry-Mohamed Fathallah - Copy.ipynb
@@ -2,7 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "id": "99f2779a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "52d1fd3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6e77291e",
    "metadata": {},
    "outputs": [
@@ -94,6 +125,7 @@
     "# Define a function to load captions from a .txt file\n",
     "\n",
     "\n",
+    "\n",
     "data = pd.read_csv(\"wmt14_translate_de-en_validation.csv\",encoding='utf-8')\n",
     "\n",
     "data.head(5)"
@@ -142,9 +174,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "gan",
    "language": "python",
-   "name": "python3"
+   "name": "gan"
   },
   "language_info": {
    "codemirror_mode": {
@@ -156,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
